# Detour

./: CLAUDE.md  README.md  flake.nix  io.github.prog_up.Detour.json  meson.build  meson_options.txt
data/: io.github.prog_up.Detour.desktop.in  io.github.prog_up.Detour.metainfo.xml.in  meson.build
src/: canvas.py  detour.in  imaging.py  main.py  meson.build  models.py  window.py
tests/: test_detour.py
